1.2.2  March 22nd 2008
	- Added BL/Saint Barthelemy, MF/Saint Martin (ISO-3166-1 additions)
	- Updated timeZone.java ( Boris Zentner )
	- Add missing \n to admin/generate_timeZone.pl ( Boris Zentner )
	- Fix refresh databaseInfo in combination with GEOIP_CHECK_CACHE ( Boris Zentner, Glenn Pedersen )
	- Changed license from GPL to LGPL, to allow commercial programs to include GeoIP API

1.2.1  June 19th 2007
	- Made GeoIP ASNum database work with Java API
	- Added timeZone and regionName classes to lookup timezone and region name
		from country code and region code (Frank Mather)

1.2.0  January 10th 2007
	- Added support for GEOIP_CHECK_CACHE (Frank Mather)
	- Allow database to be closed in memory cache mode
	- Replaced CS/Serbia and Montenegro with RS/Serbia, removed ZR/Zaire, added ME/Montenegro
	- Added AX/Aland Islands, GG/Guernsey, IM/Isle of Man, JE/Jersey (ISO-3166-1 changes)
	- Added support for GEOIP_INDEX_CACHE (Frank Mather)
	- close filehandle after data is read into memory for MemoryCache mode
	- Added BenchmarkGeoIP.java (Frank Mather)

1.1.8  August 18th 2006
	- Increased FULL_RECORD_LENGTH from 50 to 60, fixes Array out ArrayOutOfBounds=50
		for long city names in GeoIP City databases before July 2006
	- TP/East Timor changed to TL/Timor-Leste, reflecting changes in ISO-3166
	- Removed hashmap initialization for local database
	- Replaced Yugoslavia with Serbia and Montenegro

1.1.7  October 6th 2004
	- Specified ISO-8859-1 encoding for City, ISP and Organization field string
		(Yan Zhang Chen)

1.1.6  September 9th 2004
        - Fixed problem with postalCode, city and region fields 
	  returning null char (Frank Mather) 
	- Added support for GeoIP Netspeed Database (Frank Mather)
	- Added support for GEOIP_MEMORY_CACHE (Frank Mather)

1.1.5  June 3rd 2004
	- Added support for Maxmind GeoIP Region (Frank Mather)
	- Windows compatibility fix for CountryLookupTest.java (Hanan Al-Shargi)
	- Country name fixes

1.1.4  October 21st 2003