@@ -30,6 +30,7 @@ public class Location {
     public float longitude;
     public int dma_code;
     public int area_code;
+    public int metro_code;
 
     private final static double EARTH_DIAMETER = 2 * 6378.2;
     private final static double PI = 3.14159265;
